--- a/GUIChat/src/guichat/Home.fxml
+++ b/GUIChat/src/guichat/Home.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
@@ -110,7 +111,25 @@
                            <children>
                               <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
-                                    <VBox fx:id="friendsVBox" prefHeight="200.0" prefWidth="100.0" spacing="5.0" styleClass="chat" />
+                                    <VBox fx:id="friendsVBox" prefHeight="200.0" prefWidth="100.0" spacing="5.0" styleClass="chat">
+                                       <children>
+                                          <Button mnemonicParsing="false" styleClass="contact">
+                                             <graphic>
+                                                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                                   <children>
+                                                      <TextField HBox.hgrow="ALWAYS" />
+                                                      <Label layoutX="270.0" layoutY="24.0">
+                                                         <styleClass>
+                                                            <String fx:value="circle" />
+                                                            <String fx:value="offline" />
+                                                         </styleClass>
+                                                      </Label>
+                                                      <Label styleClass="icon" />
+                                                   </children>
+                                                </HBox>
+                                             </graphic>
+                                          </Button>
+                                       </children></VBox>
                                  </content>
                                  <styleClass>
                                     <String fx:value="green-scroll" />
